# dotscholar

./: .gitignore  README.md  hello.py  manage.py  pyproject.toml
academics/assessments/: apps.py  forms.py  models.py  urls.py
academics/classLevels/: apps.py  models.py  urls.py
academics/classes/: admin.py  api.py  apps.py  base_setup.py  models.py  schemas.py  urls.py
academics/marks/: apps.py  models.py  urls.py
academics/subjects/: admin.py  api.py  apps.py  base_setup.py  models.py  schemas.py  setup_data.py  urls.py
accounts/: admin.py  api.py  forms.py  models.py  schemas.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_initial.py  0003_user_first_name_user_last_name_user_username.py  0003_user_is_teacher_userprofile_phone_2_and_more.py  0004_remove_user_profile_remove_userprofile_first_name_and_more.py  0004_rename__is_school_owner_user_is_school_owner.py  0005_alter_user_first_name_alter_user_last_name_and_more.py  0005_alter_user_options.py
api/: api.py  urls.py
app/academics/: apps.py  urls.py  views.py
app/management/: apps.py  urls.py  views.py
app/pages/: apps.py  urls.py  views.py
app/people/: apps.py  urls.py  views.py
dotscholar/: appsConfig.py  asgi.py  settings.py  urls.py  wsgi.py
dotscholar/templates/: base.html
misc/onboarding/: api.py  apps.py  schemas.py  urls.py  views.py
misc/staticpages/: apps.py  urls.py  views.py
people/parents/: apps.py  models.py  urls.py
people/staff/: apps.py  models.py  views.py
people/students/: admin.py  api.py  apps.py  models.py  schemas.py  (+2 more)
schools/: apps.py
(+128 files in other folders)
