[project]
name = "dotscholar"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "django>=5.2.1",
    "django-cleanup>=9.0.0",
    "django-cors-headers>=4.7.0",
    "django-cotton>=2.1.1",
    "django-htmx>=1.23.0",
    "django-ninja>=1.4.1",
    "django-widget-tweaks>=1.5.0",
    "djangosetupheist>=0.6.2",
    "fpdf2>=2.8.3",
    "pillow>=11.2.1",
]
